[project]
name = "dolar"
version = "0.1.0"
description = "dolar using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
dolar = "dolar.main:run"
run_crew = "dolar.main:run"
train = "dolar.main:train"
replay = "dolar.main:replay"
test = "dolar.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
